flux/infrastructure/traefik/traefik/ingressroute.yaml
# Auto-split from cluster files
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-https
  namespace: traefik
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  entryPoints:
  - websecure
  tls:
    secretName: traefik-dashboard-tls
  routes:
  - match: Host(`traefik.becklab.cloud`)
    kind: Rule
    middlewares:
    - name: sso-admin-chain
      namespace: identity
    services:
    - name: api@internal
      kind: TraefikService
